--- a/web-slides/package.json
+++ b/web-slides/package.json
@@ -11,6 +11,7 @@
   "main": "index.js",
   "dependencies": {
     "command-exists": "^1.2.6",
+    "express": "^4.17.2",
     "slm": "^2.0.0",
     "wkhtmltopdf": "^0.3.4"
   },
